# lecture-ai-engineering

./: README.md  pyproject.toml
.github/workflows/: test.yml
day5/: README.md
day5/演習1/models/: titanic_model.pkl
