[tool.poetry]
name = "lecture-ai-engineering"
version = "0.1.0"
description = ""
authors = ["Kohta Dohmae"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kedro = "^0.18.14"
scikit-learn = "^1.4"
mlflow = "^2.12"
pandas = "^2.1"
great-expectations = "^1.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^24.4"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
